# FFmpegDemo

./: README.md
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: aac_parser.c  av-lib.c  avcode_info.c  decode_lbs.c  decoder.c  ffmpegCode.h  h264_parser.c  jni_util.c  native-lib.cpp  pcm_voice.c  rgb_yuv.c
app/src/main/java/com/ffmpegdemo/: AvUtil.java  DecoderActivity.java  MainActivity.java
app/src/main/jni/: ffmpeg_code.h  jni_util.c  main-lib.c  stream_push.c
app/src/main/jni/Codec/: pcm_2_aac.c  yuv_2_h264.c
app/src/main/jni/avEntry/: flv.c  yuv_rgb.c
app/src/main/jni/processDecode/: avcode_info.c
app/src/main/jni/processdecode/: decode_l.c  decoder.c  h264_parser.c  rgb_yuv.c  udp_rtp.c
app/src/main/res/layout/: activity_decoder.xml  activity_main.xml
app/src/test/java/com/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
